--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 ### Local Properties / Configurations ###
 src/main/resources/application-dev.yml
 .env
+versions.txt
 
 ### Build Directory ###
 target/
