--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 
 ### Local Properties / Configurations ###
 src/main/resources/application-dev.yml
+src/main/resources/firebase-admin-sdk.json
 .env
 versions.txt
 
